backend/internal/architecture/testdata/invalid/internal/modules/bad/mutable_global.go
package bad

// MutableState demonstrates forbidden package-owned mutable state.
var MutableState = map[string]string{}
